--- a/DestoPesto/DestoPesto/Views/MainPage.xaml
+++ b/DestoPesto/DestoPesto/Views/MainPage.xaml
@@ -100,28 +100,29 @@
                     </Frame>-->
                 <Grid Grid.Row="1" BackgroundColor="#0D6EFD"   Margin="2">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
                         <!--<RowDefinition Height="Auto"/>-->
-                        
                     </Grid.RowDefinitions>
 
+                    
                     <Grid.ColumnDefinitions >
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="7*"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
-                        
                     </Grid.ColumnDefinitions>
 
                     <Label  Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="2" HorizontalOptions="Start" VerticalOptions="Center" TextColor="White" LineBreakMode="WordWrap" FontSize="Header"  Text="Βούλα Βάρη Βουλιαγμένη Ορχομενός"/>
 
                     <Label  Grid.Column="2"  Grid.Row="0" Grid.RowSpan="2"  VerticalOptions="Center" HorizontalTextAlignment="End" TextColor="White" VerticalTextAlignment="Center" Text="{Binding MunicipalityStats.rating}" FontSize="Large" />
-                    <Image Grid.Column="3" Grid.RowSpan="2" Source="{extensions:ImageResource DestoPesto.Images.star.png}" HeightRequest="25" WidthRequest="25" VerticalOptions="Center"/>
+                    <Image Grid.Column="3" Grid.RowSpan="2" Source="{extensions:ImageResource DestoPesto.Images.star.png}" HeightRequest="20" WidthRequest="20" VerticalOptions="Center"/>
+
+
+                    <Button Grid.Column="0" Grid.RowSpan="2" x:Name="ShareBtn" BorderColor="White" BorderWidth="0"  VerticalOptions="Center" Clicked="ShareBtn_Clicked" Image="{extensions:ImageResource DestoPesto.Images.share-60.png}" HeightRequest="50" WidthRequest="50"  Margin="2" CornerRadius="10"/>
+                    <Button  Grid.Column="4" Grid.RowSpan="2" x:Name="MoreBtn" BorderColor="Gray" BorderWidth="0" CornerRadius="10" VerticalOptions="Center" Image="{extensions:ImageResource DestoPesto.Images.more-50.png}"  HorizontalOptions="End" Margin="2"/>
                     
-                    <Button  Grid.Column="4" Grid.RowSpan="2" x:Name="MoreBtn" BorderColor="black" BorderWidth="1" CornerRadius="10" VerticalOptions="Center" Image="{extensions:ImageResource DestoPesto.Images.more-50.png}"  HorizontalOptions="End" Margin="2"/>
-                    <Button Grid.Column="0" Grid.RowSpan="2" x:Name="ShareBtn" VerticalOptions="Center" Clicked="ShareBtn_Clicked" Image="{extensions:ImageResource DestoPesto.Images.share-60.png}" HeightRequest="50" WidthRequest="50" BorderColor="Black" BorderWidth="1" Margin="2" CornerRadius="10"/>
 
 
                     <!--<Label  Grid.Column="1" Grid.Row="1" VerticalOptions="Center" TextColor="White" FontSize="Header"  Text="{x:Static resources:Properties.Resources.MunicipalityScore}"/>-->
