--- a/DestoPesto/DestoPesto/Views/MainPage.xaml
+++ b/DestoPesto/DestoPesto/Views/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:extensions="clr-namespace:DestoPesto.Extensions"
-                          xmlns:resources="clr-namespace:DestoPesto"
+            xmlns:resources="clr-namespace:DestoPesto"
              x:Class="DestoPesto.Views.MainPage">
 
     <Shell.TitleView >
@@ -100,36 +100,40 @@
                     </Frame>-->
                 <Grid Grid.Row="1" BackgroundColor="#0D6EFD"   Margin="2">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                         <!--<RowDefinition Height="Auto"/>-->
                     </Grid.RowDefinitions>
 
+
+                    
                     
                     <Grid.ColumnDefinitions >
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="7*"/>
                         <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
+                        <!--<ColumnDefinition Width="Auto"/>-->
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label  Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="2" HorizontalOptions="Start" VerticalOptions="Center" TextColor="White" LineBreakMode="WordWrap" FontSize="Header"  Text="Βούλα Βάρη Βουλιαγμένη Ορχομενός"/>
+                    <Label  Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="1" HorizontalOptions="Start" VerticalOptions="Center" TextColor="White" LineBreakMode="WordWrap" FontSize="Header"  Text="Βούλα Βάρη Βουλιαγμένη Ορχομενός"/>
 
-                    <Label  Grid.Column="2"  Grid.Row="0" Grid.RowSpan="2"  VerticalOptions="Center" HorizontalTextAlignment="End" TextColor="White" VerticalTextAlignment="Center" Text="{Binding MunicipalityStats.rating}" FontSize="Large" />
-                    <Image Grid.Column="3" Grid.RowSpan="2" Source="{extensions:ImageResource DestoPesto.Images.star.png}" HeightRequest="20" WidthRequest="20" VerticalOptions="Center"/>
-
+                    <!--<Image Grid.Column="2" Grid.RowSpan="2" Source="{extensions:ImageResource DestoPesto.Images.star.png}" HeightRequest="12" WidthRequest="12" VerticalOptions="Center"/>-->
 
                     <Button Grid.Column="0" Grid.RowSpan="2" x:Name="ShareBtn" BorderColor="White" BorderWidth="0"  VerticalOptions="Center" Clicked="ShareBtn_Clicked" Image="{extensions:ImageResource DestoPesto.Images.share-60.png}" HeightRequest="50" WidthRequest="50"  Margin="2" CornerRadius="10"/>
-                    <Button  Grid.Column="4" Grid.RowSpan="2" x:Name="MoreBtn" BorderColor="Gray" BorderWidth="0" CornerRadius="10" VerticalOptions="Center" Image="{extensions:ImageResource DestoPesto.Images.more-50.png}"  HorizontalOptions="End" Margin="2"/>
+                    <Button  Grid.Column="3" Grid.RowSpan="2" x:Name="MoreBtn" BorderColor="Gray" BorderWidth="0" CornerRadius="10" VerticalOptions="Center" Image="{extensions:ImageResource DestoPesto.Images.more-50.png}"  HorizontalOptions="End" Margin="2"/>
+
+                    <Label  Grid.Column="2"  Grid.Row="0" Grid.RowSpan="2"  VerticalOptions="Start" HorizontalTextAlignment="Center" HorizontalOptions="Center" TextColor="White" VerticalTextAlignment="Center" Text="{Binding MunicipalityStats.rating}" FontSize="Large" />
+                    <Image Grid.Column="2" Grid.Row="1"   WidthRequest="50" HeightRequest="20" HorizontalOptions="Center" Source="{Binding MunicipalityStats.ratingStars}"/>
+                   
                     
 
-
+                    
                     <!--<Label  Grid.Column="1" Grid.Row="1" VerticalOptions="Center" TextColor="White" FontSize="Header"  Text="{x:Static resources:Properties.Resources.MunicipalityScore}"/>-->
                     <Label  Grid.Column="1" Grid.Row="1" VerticalOptions="Center" TextColor="White" FontSize="Header"  Text="{Binding MunicipalityStats.ranking}"/>
                     <!--<Label  Grid.Column="1" Grid.Row="2" VerticalOptions="Center" TextColor="White" FontSize="Micro"  Text="{x:Static resources:Properties.Resources.ScoreExplain}" />-->
 
-                    
+
 
                     <!--<Label  Grid.Row="1" Grid.Column="0"   Text="Εκκρεμότητες" LineBreakMode="WordWrap" BackgroundColor="#F39A4A" />
                     <Label  Grid.Row="1" Grid.Column="0"  HorizontalTextAlignment="End"  TextColor="White" Text="{Binding MunicipalityStats.unfixed}"/>
