--- a/DestoPesto/DestoPesto/Views/SubmisionPopupPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SubmisionPopupPage.xaml
@@ -40,6 +40,7 @@
             <StackLayout BackgroundColor="#0D6EFD" Grid.ColumnSpan="3">
                 <Image HeightRequest="40" Grid.Column="1" HorizontalOptions="StartAndExpand" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" VerticalOptions="CenterAndExpand" AbsoluteLayout.LayoutFlags="SizeProportional" />
             </StackLayout>
+            <Button Grid.Column="2"  x:Name="ShareBtn" BorderColor="White" BorderWidth="0" IsVisible="{Binding ShareVisible}"  VerticalOptions="Center" Clicked="ShareBtn_Clicked" Image="{extensions:ImageResource DestoPesto.Images.share-60.png}" HeightRequest="50" WidthRequest="50"  Margin="2" CornerRadius="10"/>
             <Label Grid.Row="1"  Grid.Column="1" Text="{Binding Description}" HorizontalTextAlignment="Center" VerticalOptions="Center" HorizontalOptions="Center" LineBreakMode="WordWrap"></Label>
             <!--<Grid Padding="10,20,10,20" Grid.Row="1">-->
 
