--- a/DestoPesto/DestoPesto/Views/PermissionsPage.xaml
+++ b/DestoPesto/DestoPesto/Views/PermissionsPage.xaml
@@ -41,7 +41,7 @@
                 <Grid HorizontalOptions="FillAndExpand" HeightRequest="200" BackgroundColor="Red">
                     <WebView x:Name="browser" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" >
                         <WebView.Source>
-                            <HtmlWebViewSource Html="{Binding MobileHomePage}" />
+                        <HtmlWebViewSource Html="{Binding PermissionsHomePage}" />
                         </WebView.Source>
                         <!--https://destopesto.blob.core.windows.net/destopesto/docs/homescreentext.txt-->
                     </WebView>
