--- a/DestoPesto/DestoPesto/Views/MunicipalityStatsPopUp.xaml
+++ b/DestoPesto/DestoPesto/Views/MunicipalityStatsPopUp.xaml
@@ -2,10 +2,14 @@
 <pages:PopupPage  xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DestoPesto.Views.MunicipalityStatsPopUp"
+                  xmlns:extensions="clr-namespace:DestoPesto.Extensions"
              xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"    
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
              xmlns:resources="clr-namespace:DestoPesto"
                         CloseWhenBackgroundIsClicked="True">
+
+    
+
     <pages:PopupPage.Animation>
         <animations:ScaleAnimation DurationIn="400"
                                 DurationOut="300"
@@ -24,9 +28,8 @@
          HasShadow="True"
          MinimumHeightRequest="600"
          IsClippedToBounds="True"
-         BackgroundColor="LightGray"
          Padding="5">
-        <StackLayout Padding="30">
+        <StackLayout Padding="5">
             <Grid VerticalOptions="Center"  >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
@@ -35,39 +38,35 @@
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <Grid  Grid.Row="1" Grid.ColumnSpan="3">
-                    <Grid.ColumnDefinitions >
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label Text="{x:Static resources:Properties.Resources.MunicipalityUnfixed}"  ></Label>
-                    <Label BackgroundColor="#039ece" HorizontalTextAlignment="End"  TextColor="White" Grid.Column="1" Text="{Binding MunicipalityStats.unfixed}"></Label>
-                </Grid>
-                <Grid Grid.Row="2"  Grid.ColumnSpan="3">
-                    <Grid.ColumnDefinitions >
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label Text="{x:Static resources:Properties.Resources.MunicipalityFixed}" ></Label>
-                    <Label BackgroundColor="#039ece" HorizontalTextAlignment="End" TextColor="White" Grid.Column="1" Text="{Binding MunicipalityStats._fixed}"></Label>
-                </Grid>
-                <Grid  Grid.Row="3"  Grid.ColumnSpan="3">
-                    <Grid.ColumnDefinitions >
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label Text="{x:Static resources:Properties.Resources.MunicipalityAvrgRepairDays}"></Label>
-                    <Label BackgroundColor="#039ece" HorizontalTextAlignment="End"  TextColor="White" Grid.Column="1" Text="{Binding MunicipalityStats.average_repair_days}"></Label>
-                </Grid>
-                <Grid Margin="2,0,2,0" Grid.Row="4"  Grid.ColumnSpan="3">
-                    <Grid.ColumnDefinitions >
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label Text="{x:Static resources:Properties.Resources.MunicipalityUnfixedDays}" ></Label>
-                    <Label BackgroundColor="#039ece" HorizontalTextAlignment="End" TextColor="White" Grid.Column="1" Text="{Binding MunicipalityStats.Unfixed_days}"></Label>
-                </Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="4*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+
+                <Image Grid.Row="0" Grid.ColumnSpan="3" BackgroundColor="#0D6EFD" HorizontalOptions="Center" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" VerticalOptions="Center" AbsoluteLayout.LayoutFlags="All" />
+
+                <Label Grid.Row="1"  Text="{x:Static resources:Properties.Resources.MunicipalityUnfixed}" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" FontSize="Small"/>
+                <Label Grid.Row="1" BackgroundColor="#039ece" HorizontalTextAlignment="End"  TextColor="White" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding MunicipalityStats.unfixed}" FontSize="Medium" VerticalTextAlignment="Center" />
+
+                <Label Grid.Row="2" Text="{x:Static resources:Properties.Resources.MunicipalityFixed}" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" FontSize="Small"/>
+                <Label Grid.Row="2" BackgroundColor="#039ece" HorizontalTextAlignment="End" TextColor="White" Grid.Column="1" Text="{Binding MunicipalityStats._fixed}" Margin="5" FontSize="Medium" VerticalTextAlignment="Center" />
+                <Label Grid.Row="2" BackgroundColor="#039ece" HorizontalTextAlignment="End"  TextColor="White" Grid.Column="2" Text="{Binding MunicipalityStats.perc}" Margin="5" FontSize="Medium" VerticalTextAlignment="Center" />
+
+                <Label Grid.Row="3" Text="{x:Static resources:Properties.Resources.MunicipalityAvrgRepairDays}" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" FontSize="Small"/>
+                <Label Grid.Row="3" BackgroundColor="#039ece" HorizontalTextAlignment="End"  TextColor="White" Grid.Column="1" Text="{Binding MunicipalityStats.average_repair_days}" Margin="5" FontSize="Medium" VerticalTextAlignment="Center" />
+                <Label Grid.Row="3" Text="{x:Static resources:Properties.Resources.DaysText}" HorizontalTextAlignment="Start" Grid.Column="2" Margin="5" VerticalTextAlignment="Center" FontSize="Small"/>
+
+                <Label Grid.Row="4" Text="{x:Static resources:Properties.Resources.MunicipalityUnfixedDays}" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" FontSize="Small"/>
+                <Label Grid.Row="4" BackgroundColor="#039ece" HorizontalTextAlignment="End" TextColor="White" Grid.Column="1" Text="{Binding MunicipalityStats.Unfixed_days}" Margin="5" FontSize="Medium" VerticalTextAlignment="Center" />
+                <Label Grid.Row="4" Text="{x:Static resources:Properties.Resources.DaysText}" HorizontalTextAlignment="Start" Grid.Column="2" Margin="5" VerticalTextAlignment="Center" FontSize="Small"/>
+
+                <Button Grid.Row="5" Grid.ColumnSpan="3" Text="{x:Static resources:Properties.Resources.Oktext}" x:Name="RightBtn" Clicked="RightBtn_Clicked" HorizontalOptions="EndAndExpand"   BackgroundColor="#0D6EFD" FontSize="Small" TextColor="White" Padding="5" CornerRadius="5" TextTransform="None"/>
+
+
             </Grid>
         </StackLayout>
     </Frame>
