--- a/DestoPesto/DestoPesto/Views/MunicipalityStatsPopUp.xaml
+++ b/DestoPesto/DestoPesto/Views/MunicipalityStatsPopUp.xaml
@@ -63,12 +63,12 @@
                 
                 <Label Grid.Row="5" Text="{x:Static resources:Properties.Resources.MunicipalityAvrgRepairDays}" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" FontSize="Small"/>
                 <Label Grid.Row="5"  HorizontalTextAlignment="End" FontAttributes="Bold"  Grid.Column="1" Text="{Binding MunicipalityStats.average_repair_days}" Margin="5" FontSize="Medium" VerticalTextAlignment="Center" />
-                <Label Grid.Row="5" Text="{x:Static resources:Properties.Resources.DaysText}" HorizontalTextAlignment="Start" Grid.Column="2" Margin="5" VerticalTextAlignment="Center" FontSize="Small"/>
+                <Label Grid.Row="5" Text="{x:Static resources:Properties.Resources.DaysText}" HorizontalTextAlignment="End" Grid.Column="2" Margin="5" VerticalTextAlignment="Center" FontSize="Small"/>
                 <BoxView Grid.Row="6" Color="LightGray"  HeightRequest="1" Grid.ColumnSpan="3"/>
                 
                 <Label Grid.Row="7" Text="{x:Static resources:Properties.Resources.MunicipalityUnfixedDays}" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" FontSize="Small"/>
                 <Label Grid.Row="7"  HorizontalTextAlignment="End"  FontAttributes="Bold" Grid.Column="1" Text="{Binding MunicipalityStats.Unfixed_days}" Margin="5" FontSize="Medium" VerticalTextAlignment="Center" />
-                <Label Grid.Row="7" Text="{x:Static resources:Properties.Resources.DaysText}" HorizontalTextAlignment="Start" Grid.Column="2" Margin="5" VerticalTextAlignment="Center" FontSize="Small"/>
+                <Label Grid.Row="7" Text="{x:Static resources:Properties.Resources.DaysText}" HorizontalTextAlignment="End" Grid.Column="2" Margin="5" VerticalTextAlignment="Center" FontSize="Small"/>
                 <BoxView Grid.Row="8" Color="LightGray"  HeightRequest="1" Grid.ColumnSpan="3"/>
                 
                 <Button Grid.Row="9" Grid.ColumnSpan="3" Text="{x:Static resources:Properties.Resources.Oktext}" x:Name="RightBtn" Clicked="RightBtn_Clicked" HorizontalOptions="EndAndExpand"   BackgroundColor="#0D6EFD" FontSize="Small" TextColor="White" Padding="5" CornerRadius="5" TextTransform="None"/>
