--- a/DestoPesto/DestoPesto/Views/MainPage.xaml
+++ b/DestoPesto/DestoPesto/Views/MainPage.xaml
@@ -116,7 +116,7 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label  Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="1" HorizontalOptions="Start" VerticalOptions="Center" TextColor="White" LineBreakMode="WordWrap" FontSize="Header"  Text="Βούλα Βάρη Βουλιαγμένη Ορχομενός"/>
+                    <Label  Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="1" HorizontalOptions="Start" VerticalOptions="Center" TextColor="White" LineBreakMode="WordWrap" FontSize="Header"  Text="{Binding MunicipalityStats.MunicipalityName}" />
 
                     <!--<Image Grid.Column="2" Grid.RowSpan="2" Source="{extensions:ImageResource DestoPesto.Images.star.png}" HeightRequest="12" WidthRequest="12" VerticalOptions="Center"/>-->
 
