--- a/DestoPesto/DestoPesto/Views/PermissionsPage.xaml
+++ b/DestoPesto/DestoPesto/Views/PermissionsPage.xaml
@@ -22,9 +22,9 @@
     </pages:PopupPage.Animation>
 
 
-    
 
-        <Frame Margin="5" 
+
+    <Frame Margin="5" 
            CornerRadius="10"
            HorizontalOptions="Fill" 
            VerticalOptions="Center"
@@ -33,20 +33,21 @@
            IsClippedToBounds="True"
            BackgroundColor="White"
            Padding="5">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid HorizontalOptions="FillAndExpand" HeightRequest="350" BackgroundColor="Red">
-                    <WebView x:Name="browser" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" >
-                        <WebView.Source>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid HorizontalOptions="FillAndExpand" HeightRequest="350" BackgroundColor="Red">
+                <WebView x:Name="browser" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" >
+                    <WebView.Source>
                         <HtmlWebViewSource Html="{Binding PermissionsHomePage}" />
-                        </WebView.Source>
-                        <!--https://destopesto.blob.core.windows.net/destopesto/docs/homescreentext.txt-->
-                    </WebView>
-                </Grid>
-                <!--<StackLayout IsVisible="false" x:Name="TitleBar" Orientation="Vertical" Grid.Column="0" BackgroundColor="#0D6EFD" VerticalOptions="CenterAndExpand">
+                    </WebView.Source>
+                    <!--https://destopesto.blob.core.windows.net/destopesto/docs/homescreentext.txt-->
+                </WebView>
+            </Grid>
+            <Button Grid.Row="1"   x:Name="GoToSettings" Clicked="GoToSettings_Clicked" Text="{x:Static resources:Properties.Resources.GoToSetttingsText}" IsVisible="true"/>
+            <!--<StackLayout IsVisible="false" x:Name="TitleBar" Orientation="Vertical" Grid.Column="0" BackgroundColor="#0D6EFD" VerticalOptions="CenterAndExpand">
                 <Image HorizontalOptions="Start" Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" VerticalOptions="Center" AbsoluteLayout.LayoutFlags="All" />
             </StackLayout>
             <ScrollView IsVisible="false"  Grid.Row="1"  HorizontalScrollBarVisibility="Never" HorizontalOptions="FillAndExpand">
@@ -95,7 +96,7 @@
 
                 </Grid>
             </ScrollView>-->
-            </Grid>
-        </Frame>
-    
+        </Grid>
+    </Frame>
+
 </pages:PopupPage>
