--- a/DestoPesto/DestoPesto/Views/MainPage.xaml
+++ b/DestoPesto/DestoPesto/Views/MainPage.xaml
@@ -109,21 +109,21 @@
                     
                     
                     <Grid.ColumnDefinitions >
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="7*"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="15*"/>
                         <ColumnDefinition Width="Auto"/>
                         <!--<ColumnDefinition Width="Auto"/>-->
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="auto"/>
                     </Grid.ColumnDefinitions>
 
                     <Label  Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="1" HorizontalOptions="Start" VerticalOptions="Center" TextColor="White" LineBreakMode="WordWrap" FontSize="Header"  Text="{Binding MunicipalityStats.MunicipalityName}" />
 
                     <!--<Image Grid.Column="2" Grid.RowSpan="2" Source="{extensions:ImageResource DestoPesto.Images.star.png}" HeightRequest="12" WidthRequest="12" VerticalOptions="Center"/>-->
 
-                    <Button Grid.Column="0" Grid.RowSpan="2" x:Name="ShareBtn" BorderColor="White" BorderWidth="0"  VerticalOptions="Center" Clicked="ShareBtn_Clicked" Image="{extensions:ImageResource DestoPesto.Images.share-60.png}" HeightRequest="50" WidthRequest="50"  Margin="2" CornerRadius="10"/>
-                    <Button  Grid.Column="3" Grid.RowSpan="2" x:Name="MoreBtn" BorderColor="Gray" BorderWidth="0" CornerRadius="10" VerticalOptions="Center" Image="{extensions:ImageResource DestoPesto.Images.more-50.png}"  HorizontalOptions="End" Clicked="MoreBtn_Clicked" Margin="2"/>
+                    <Button Grid.Column="0" Grid.RowSpan="2" x:Name="ShareBtn" BorderColor="White" BorderWidth="0"  VerticalOptions="Center" Clicked="ShareBtn_Clicked" Image="{extensions:ImageResource DestoPesto.Images.share-60.png}" HeightRequest="40" WidthRequest="40"  Margin="2" CornerRadius="10"/>
+                    <Button  Grid.Column="3" Grid.RowSpan="2" x:Name="MoreBtn" BorderColor="Gray" BorderWidth="0" CornerRadius="10" VerticalOptions="Center" Image="{extensions:ImageResource DestoPesto.Images.more-50.png}"  HorizontalOptions="End" HeightRequest="40" WidthRequest="40" Clicked="MoreBtn_Clicked" Margin="2"/>
 
-                    <Label  Grid.Column="2"  Grid.Row="0" Grid.RowSpan="2"  VerticalOptions="Start" HorizontalTextAlignment="Center" HorizontalOptions="Center" TextColor="White" VerticalTextAlignment="Center" Text="{Binding MunicipalityStats.rating}" FontSize="Large" />
+                    <Label  Grid.Column="2"  Grid.Row="0" Grid.RowSpan="2"  VerticalOptions="Start" HorizontalTextAlignment="Center" HorizontalOptions="Center" TextColor="White" VerticalTextAlignment="Center" LineBreakMode="WordWrap" Text="{Binding MunicipalityStats.rating}" FontSize="Large" />
                     <Image Grid.Column="2" Grid.Row="1"   WidthRequest="50" HeightRequest="20" HorizontalOptions="Center" Source="{Binding MunicipalityStats.ratingStars}"/>
                    
                     
